<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <Button
        android:id="@+id/but_diseases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:layout_above="@id/but_medicines"
        android:layout_marginBottom="100dp"
        android:text="@string/diseases"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/but_medicines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/medicines"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/but_firstAid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@id/but_medicines"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/first_aid"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>